# gfx-study

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflow/: format.yml
.github/workflows/: format.yml
sandbox/: CMakeLists.txt
sandbox/model/src/: main.cpp
sandbox/simpleshadow/: shadow.md
sandbox/simpleshadow/src/: main.cpp
sandbox/simpletexture/src/: main.cpp
sandbox/triangle/src/: main.cpp
scripts/: build.bat  build.ps1  format.ps1  format.sh  glsl_compile.bat  hlsl_compile.bat  hlsl_compile.ps1  hlsl_compile.sh  line_count.bat  linecount.ps1  linecount.sh
shaders/: base.hlsl  shadow.hlsl  shadow_gen.hlsl  texture.hlsl  triangle.hlsl
shaders/test/: triangle_direct.hlsl
src/: Base.cpp  Base.hpp  Log.hpp  Model.cpp  Model.hpp  UiLayout.cpp  UiLayout.hpp  VulkanUsage.cpp  VulkanUtils.cpp  VulkanUtils.hpp
src/core/: Core.cpp  Core.hpp  Window.cpp  Window.hpp
src/gfx/vulkan/: Device.cpp  Device.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Resource.cpp  Resource.hpp  Swapchain.cpp  Swapchain.hpp  UiLayout.cpp  UiLayout.hpp  Utils.cpp  Utils.hpp  VulkanUsage.cpp  VulkanUsage.hpp
